# spacekit

./: .bandit.yml  .gitignore  .readthedocs.yaml  .readthedocs.yml  CHANGES.rst  CONTRIBUTING.md  LICENSE  MANIFEST.IN  README.md  conftest.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: dependabot.yml  labeler.yml
.github/workflows/: ci.yml  ci_workflows.yml  label_pull_request.yml  publish_to_pypi.yml  release_dryrun.yml  tag_and_release.yml  verify_changelog.yml
.github/workflows/build_artifacts/: action.yml
.github/workflows/pypi_publish/: action.yml
circleci.egg-info/: PKG-INFO  SOURCES.txt
doc/source/: conf.py  dashboard.rst  datasets.rst  generator.rst  preprocessor.rst
doc/source/analyzer/: track.rst
doc/source/builder/: networks.rst
doc/source/dashboard/: cal.rst
doc/source/extractor/: radio.rst
doc/source/generator/: augment.rst  draw.rst
doc/source/preprocessor/: scrub.rst  transform.rst
doc/source/skopes/: hst.rst
doc/source/skopes/hst/: cal.rst  svm.rst
docker/: README.md
docker/dashboard/: Dockerfile  README.md  requirements.txt  run-container.sh  scrape.sh
docker/dashboard/env-templates/: cal-aws-template.env  cal-pkg-template.env
docker/dashboard/scripts/: build-image.sh  run-dashboard.sh  run-interactive.sh  scrape-s3.sh  scrape-web.sh
docker/data/: categorized_subset.csv
docker/images/base_image/: Dockerfile  requirements-dev.txt  requirements.txt
docker/images/dashboard_image/: .env  .env-template  Dockerfile
docker/images/dashboard_image/envs/: dashboard.env  dev.env  nightly.env  testing.env
docker/images/svm_image/: Dockerfile  run-container.sh
docker/images/svm_image/scripts/: svm-predict.sh  svm-prep.sh  svm-train.sh
docker/images/test_image/: .env  Dockerfile
docker/scripts/: build-base.sh  build.sh  installer.sh  launch.sh
docker/spacekit_base_image/: build-base.sh
docker/spacekit_dev_image/: .env  Dockerfile  build-dev.sh
docker/spacekit_test_image/: .env  build-test.sh
docker/svm/: Dockerfile  build-image.sh  requirements.txt  run-container.sh
docker/svm/scripts/: svm-synthesize.sh
docs/: Makefile  analyzer.rst  conf.py  extractor.rst  index.rst  requirements.txt  skopes.rst
docs/analyzer/: compute.rst  explore.rst
docs/builder/: cnn.rst
docs/extractor/: draw_mosaics.rst  frame_data.rst  load_images.rst  scrape_json.rst
docs/preprocessor/: augment.rst  radio.rst
docs/skopes/hst/: svm-classifier.rst  svm-corrupt.rst  svm-predict.rst  svm-train.rst
docs/skopes/kepler/: planet-hunter.rst
docs/source/: analyzer.rst  builder.rst  conf.py  dashboard.rst  datasets.rst  extractor.rst  generator.rst  index.rst  overview.rst  preprocessor.rst  skopes.rst
docs/source/_static/css/: custom.css
docs/source/_static/js/: custom.js
docs/source/_templates/: index.html
docs/source/analyzer/: compute.rst  explore.rst  index.rst  scan.rst  track.rst
docs/source/builder/: architect.rst  blueprints.rst  index.rst  networks.rst
docs/source/dashboard/: cal.rst  index.rst  svm.rst
docs/source/datasets/: beam.rst  hst_cal.rst  hst_svm.rst  index.rst  k2_exo.rst
docs/source/extractor/: index.rst  load.rst  radio.rst  scrape.rst
docs/source/generator/: augment.rst  draw.rst  index.rst
docs/source/logger/: index.rst  log.rst
docs/source/preprocessor/: encode.rst  index.rst  ingest.rst  prep.rst  scrub.rst  transform.rst
docs/source/skopes/: hst.rst  index.rst  jwst.rst
docs/source/skopes/hst/: cal.rst  index.rst  svm.rst
docs/source/skopes/jwst/: cal.rst  index.rst
docs/source/skopes/kepler/: index.rst  light-curves.rst  light_curves.rst
examples/: demo.py  k2_lightcurve_cnn.py
models/ensembleSVM/: saved_model.pb
models/ensembleSVM/variables/: variables.index
previews/: corruption.txt
scripts/: build-base.sh  build-test.sh  build.sh  get_changelog  launch.sh  set_release_date
spacekit/: __init__.py  _version.py  analyzer.py  builder.py  computer.py  radio.py  transformer.py
spacekit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
spacekit/analyzer/: compute.py  explore.py  scan.py  track.py  validate.py
spacekit/builder/: architect.py  blueprints.py  cnn.py  networks.py
spacekit/dashboard/: __init__.py  app.py
spacekit/dashboard/assets/: style.css  typography.css
spacekit/dashboard/cal/: __init__.py  app.py  config.py  eda.py  eval.py  home.py  index.py  nodegraph.py  pred.py
spacekit/dashboard/cal/layouts/: __init__.py  eda.py  eval.py  home.py  pred.py
spacekit/dashboard/pred/: nodegraph.py  predictor.py
spacekit/dashboard/svm/: app.py  config.py  eda.py  eval.py  index.py  pred.py
spacekit/dashboard/svm/layouts/: eda.py  eval.py  home.py  pred.py
spacekit/datasets/: __init__.py  _base.py  beam.py  hst_cal.py  hst_svm.py  k2_exo.py  meta.py
spacekit/datasets/data/svm/: svm_2021-07-28.csv  svm_2021-10-06.csv
spacekit/extractor/: data_framer.py  draw_mosaics.py  frame_data.py  load.py  load_data.py  load_images.py  radio.py  scrape.py  scrape_json.py  utils.py
spacekit/generator/: augment.py  draw.py
spacekit/logger/: log.py
spacekit/preprocessor/: __init__.py  augment.py  encode.py  extract.py  ingest.py  prep.py  radio.py  scrub.py  transform.py
spacekit/skopes/hst/cal/: config.py  datasets.py  predict.py  repro.py  train.py  train2.py  validate.py
spacekit/skopes/hst/mosaic/: svm_corrupt.py  svm_predict.py  svm_train.py
spacekit/skopes/hst/svm/: corrupt.py  main.py  (+3 more)
spacekit/skopes/kepler/: light_curves.py
spacekit/tracker/: stopwatch.py
spacekit_pkg/: analyzer.py  builder.py  computer.py  radio.py  spacekit.py  transformer.py
tests/: data_plugin.py  pytest.ini  test_example.py
tests/analyzer/: test_explore.py  test_scan.py
tests/builder/: test_architect.py
tests/data/cal/: calcloud.json  tx_data.json
tests/data/svm/: svm.json  tx_data.json
tests/extractor/: test_radio.py  test_scrape.py
tests/generator/: test_draw.py
tests/preprocessor/: test_encode.py  test_scrub.py  test_transform.py
tests/skopes/svm/: test_svm.py  test_svm_predict.py
(+182 files in other folders)
