[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 130
exclude = [
    'docs',
    'docker',
    'build',
    '.tox',
    '.eggs',
    '.git',
    '__pycache__',
    'dist',
    '.egg',
]

ignore = [
    'E741', # ambiguous variable name
]

[tool.ruff.per-file-ignores]
    'spacekit/preprocessor/scrub.py' = ['E712']