[build-system]
requires = [
    "setuptools>=61.2",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 130
exclude = [
    'docs',
    'docker',
    'build',
    '.tox',
    '.eggs',
    '.git',
    '__pycache__',
    'dist',
    '.egg',
]
[tool.ruff.lint]
ignore = [
    'E741', # ambiguous variable name
]

[tool.ruff.lint.per-file-ignores]
    'spacekit/preprocessor/scrub.py' = ['E712']