[metadata]
name = spacekit
version = 1.0.0
author = Ru Keïn
author_email = rkein@stsci.edu
license = MIT
license_files = LICENSE
url = https://github.com/spacetelescope/spacekit
description = Astronomical Data Science and Machine Learning Toolkit
long_description = file: README.md
long_description_content_type = text/markdown
edit_on_github = False
github_project = spacetelescope/spacekit
project_urls =
    Source = https://github.com/spacetelescope/spacekit
    Documentation = https://spacekit.readthedocs.io
    Tracker = https://github.com/spacetelescope/spacekit/issues
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.7
setup_requires = 
    setuptools >=42

install_requires =
    tensorflow>=2.7
    astropy
    boto3
    numpy>=1.19
    pandas
    scikit-learn

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-profiling
    tox
    bandit
    moto
    black
    ruff
docs =
    sphinx
    sphinx_rtd_theme
    pydot
    graphviz
    sphinx-automodapi
    numpydoc
x =
    astroquery
    matplotlib<4
    pydot
    graphviz
    plotly
    progressbar
    scikeras
    tables
    tqdm

[options.package_data]
spacekit = 
    builder/trained_networks/*

[tool:pytest]
testpaths = spacekit/tests
doctest_plus = enabled
text_file_format = md

[coverage:run]
omit =
    spacekit/*setup_package*
    spacekit/tests/*
    spacekit/*/tests/*
    spacekit/version*
    */spacekit/*setup_package*
    */spacekit/tests/*
    */spacekit/*/tests/*
    docs/*
    spacekit/__init__.py

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
    # ignore script implementation
    if __name__ == '__main__':


[build_sphinx]
builder = html
warning-is-error = 1
