[metadata]
name = spacekit
version = 1.1.4rc1
author = Ru Keïn
author_email = rkein@stsci.edu
license = MIT
license_files = LICENSE
url = https://github.com/spacetelescope/spacekit
description = Astronomical Data Science and Machine Learning Toolkit
long_description = file: README.md
long_description_content_type = text/markdown
edit_on_github = False
github_project = spacetelescope/spacekit
project_urls =
    Source = https://github.com/spacetelescope/spacekit
    Documentation = https://www.spacekit.org
    Tracker = https://github.com/spacetelescope/spacekit/issues
classifiers=
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.10
setup_requires = 
    setuptools >=61.2

install_requires =
    tensorflow>=2.16.1
    astropy
    boto3
    numpy>=1.25
    pandas
    scikit-learn>=1.3.2

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-profiling
    tox
    bandit
    moto
    black
    ruff
docs =
    sphinx
    furo
    pydot
    graphviz
    sphinx-automodapi
    numpydoc
    sphinx-autobuild
x =
    astroquery
    matplotlib<4
    pydot
    graphviz
    plotly
    progressbar
    scikeras
    tables
    tqdm

[options.package_data]
spacekit = 
    builder/trained_networks/*

[tool:pytest]
testpaths = spacekit/tests
doctest_plus = enabled
text_file_format = md

[coverage:run]
omit =
    spacekit/*setup_package*
    spacekit/tests/*
    spacekit/*/tests/*
    spacekit/version*
    */spacekit/*setup_package*
    */spacekit/tests/*
    */spacekit/*/tests/*
    docs/*
    spacekit/__init__.py

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
    # ignore script implementation
    if __name__ == '__main__':


[build_sphinx]
builder = html
warning-is-error = 1
